# AI-Adventure-Edge

./: .gitignore  Jetson-Nano-API-Documentation.md  Jetson-Nano-Documentation.md  README.md  debug_compare.py  debug_live.py  debug_realcam.py  environment.yml  pyproject.toml  requirements.txt
configs/: edge-runtime.example.json
models/: best.pt  config.yaml  config_v2.yaml  ctrgcn_fp16.engine
scripts/: build_ctrgcn_engine.sh  install_jetson_cusparselt.sh  install_jetson_torch.sh
src/adventure_game_jetson/: __init__.py
src/adventure_game_jetson/app/: __init__.py  main.py
src/adventure_game_jetson/capture/: __init__.py  video_source.py
src/adventure_game_jetson/core/: __init__.py  engine.py  story.py  types.py
src/adventure_game_jetson/edge/: __init__.py  payloads.py  publishers.py  video.py
src/adventure_game_jetson/inference/: __init__.py  ctrgcn_runner.py  pose_extractor.py  profiling.py  runtime.py
src/adventure_game_jetson/inference/backends/: __init__.py  base.py  pytorch_ctrgcn.py  tensorrt_ctrgcn.py
src/adventure_game_jetson/inference/graph/: __init__.py  mediapipe_pose.py  ntu_rgb_d.py  tools.py  ucla.py
src/adventure_game_jetson/inference/model/: __init__.py  ctrgcn.py
src/adventure_game_jetson/ui/: __init__.py  renderer.py
tools/: collect_data.py  download_clips.py  download_dataset.py  extract_skeletons.py  generate_synthetic.py  train_from_videos.py  train_model.py
